// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataSourceList Empty 1`] = `
.c14 {
  height: 155px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c15 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c0 {
  width: calc(100% - 50px);
}

.c1 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c4 a {
  padding: 8px 0;
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
}

.c11 {
  color: #FFF;
}

.c12 {
  color: #FFF;
}

.c5 {
  display: none;
}

.c6 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c6:hover {
  border-bottom-color: #FFF;
}

.c8 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c8:hover {
  border-bottom-color: #FFF;
}

.c7 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1040px) {
  .c16 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c15 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c13 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c1"
        >
          <ul
            className="c2"
          />
          <ul
            className="c3"
          >
            <li
              className="c4"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
        </div>
        <div
          className="c8"
        >
          <a
            className="c7"
            href="/project/1/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/directory"
            onClick={[Function]}
          >
            <span>
              Directories
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <section
      className="c13"
    />
    <div
      className="c14"
    >
      <div
        className="c15"
      >
        <div
          className="c16"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With data source 1`] = `
.c24 {
  height: 155px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c25 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c0 {
  width: calc(100% - 50px);
}

.c1 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c4 a {
  padding: 8px 0;
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
}

.c11 {
  color: #FFF;
}

.c12 {
  color: #FFF;
}

.c5 {
  display: none;
}

.c6 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c6:hover {
  border-bottom-color: #FFF;
}

.c8 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c8:hover {
  border-bottom-color: #FFF;
}

.c7 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 {
  cursor: pointer;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 27px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  font-weight: 600;
  font-size: 12px;
  margin-bottom: 10px;
}

.c23 {
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  margin-top: -8px;
}

.c16 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c17 {
  display: inline-block;
  line-height: 1.25;
  margin-right: 1.5em;
  color: #71737e;
}

.c17::before {
  content: '•';
  margin-left: -1.5em;
  display: inline-block;
  padding: 0 7px;
}

.c14 {
  margin-bottom: 20px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1040px) {
  .c26 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c25 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c14 {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1040px) {
  .c13 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c1"
        >
          <ul
            className="c2"
          />
          <ul
            className="c3"
          >
            <li
              className="c4"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
        </div>
        <div
          className="c8"
        >
          <a
            className="c7"
            href="/project/1/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/directory"
            onClick={[Function]}
          >
            <span>
              Directories
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <section
      className="c13"
    >
      <div
        className="c14"
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "borderTop": "2px solid #FFF",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "padding": "12px 14px 14px",
          }
        }
      >
        <div
          style={
            Object {
              "color": undefined,
              "fontSize": "12px",
              "marginBottom": "14px",
            }
          }
        >
          <div
            className="c15"
          >
            <ul
              className="c16"
            >
              <li
                className="c17"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c17"
                id="headerItem-1"
              >
                firstName lastName
              </li>
            </ul>
            <div
              className="c18"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
                <path
                  d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
              </svg>
            </div>
          </div>
        </div>
        <h1
          className="c19"
          id="dataSourceTitle"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          name
        </h1>
        <div
          className="c20"
        >
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-0"
            >
              Source
            </span>
            <span
              className="c23"
              id="metaItemValue-0"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-1"
            >
              Items
            </span>
            <span
              className="c23"
              id="metaItemValue-1"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-2"
            >
              Fields
            </span>
            <span
              className="c23"
              id="metaItemValue-2"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-3"
            >
              Filters
            </span>
            <span
              className="c23"
              id="metaItemValue-3"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-4"
            >
              Views
            </span>
            <span
              className="c23"
              id="metaItemValue-4"
            >
              —
            </span>
          </div>
        </div>
      </div>
      <div
        className="c14"
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "borderTop": "2px solid #FFF",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "padding": "12px 14px 14px",
          }
        }
      >
        <div
          style={
            Object {
              "color": undefined,
              "fontSize": "12px",
              "marginBottom": "14px",
            }
          }
        >
          <div
            className="c15"
          >
            <ul
              className="c16"
            >
              <li
                className="c17"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c17"
                id="headerItem-1"
              >
                firstName lastName
              </li>
            </ul>
            <div
              className="c18"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
                <path
                  d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
              </svg>
            </div>
          </div>
        </div>
        <h1
          className="c19"
          id="dataSourceTitle"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          name
        </h1>
        <div
          className="c20"
        >
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-0"
            >
              Source
            </span>
            <span
              className="c23"
              id="metaItemValue-0"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-1"
            >
              Items
            </span>
            <span
              className="c23"
              id="metaItemValue-1"
            >
              246
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-2"
            >
              Fields
            </span>
            <span
              className="c23"
              id="metaItemValue-2"
            >
              11
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-3"
            >
              Filters
            </span>
            <span
              className="c23"
              id="metaItemValue-3"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-4"
            >
              Views
            </span>
            <span
              className="c23"
              id="metaItemValue-4"
            >
              —
            </span>
          </div>
        </div>
      </div>
    </section>
    <div
      className="c24"
    >
      <div
        className="c25"
      >
        <div
          className="c26"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With jobs 1`] = `
.c24 {
  height: 155px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c25 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c0 {
  width: calc(100% - 50px);
}

.c1 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  margin: 20px -20px 0 0;
  padding-right: 20px;
  -webkit-overflow-scrolling: touch;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFF;
  display: block;
}

.c4 a {
  padding: 8px 0;
}

.c9 {
  display: none;
}

.c10 {
  margin-right: 20px;
}

.c11 {
  color: #FFF;
}

.c12 {
  color: #FFF;
}

.c5 {
  display: none;
}

.c6 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #2F2F36;
  cursor: pointer;
}

.c6:hover {
  border-bottom-color: #FFF;
}

.c8 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  text-align: center;
  border-bottom: 2px solid #FFF;
  cursor: pointer;
}

.c8:hover {
  border-bottom-color: #FFF;
}

.c7 {
  color: #FFF;
  display: block;
  padding: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 {
  cursor: pointer;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 27px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  font-weight: 600;
  font-size: 12px;
  margin-bottom: 10px;
}

.c23 {
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  margin-top: -8px;
}

.c16 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c17 {
  display: inline-block;
  line-height: 1.25;
  margin-right: 1.5em;
  color: #71737e;
}

.c17::before {
  content: '•';
  margin-left: -1.5em;
  display: inline-block;
  padding: 0 7px;
}

.c14 {
  margin-bottom: 20px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1040px) {
  .c26 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c25 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1040px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
    margin: 60px 0 40px 0;
  }
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin: 29px 0 20px 0;
    font-size: 15px;
  }
}

@media (min-width:1040px) {
  .c14 {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1040px) {
  .c13 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c1"
        >
          <ul
            className="c2"
          />
          <ul
            className="c3"
          >
            <li
              className="c4"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
        </div>
        <div
          className="c8"
        >
          <a
            className="c7"
            href="/project/1/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
        <div
          className="c6"
        >
          <a
            className="c7"
            href="/project/1/directory"
            onClick={[Function]}
          >
            <span>
              Directories
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h2
          className="c11"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h2>
        <h1
          className="c12"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <section
      className="c13"
    >
      <div
        className="c14"
        style={
          Object {
            "backgroundColor": "#1d1d20",
            "borderTop": "2px solid #FFF",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "column",
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "padding": "12px 14px 14px",
          }
        }
      >
        <div
          style={
            Object {
              "color": undefined,
              "fontSize": "12px",
              "marginBottom": "14px",
            }
          }
        >
          <div
            className="c15"
          >
            <ul
              className="c16"
            >
              <li
                className="c17"
                id="headerItem-0"
              >
                3 months ago
              </li>
              <li
                className="c17"
                id="headerItem-1"
              >
                firstName lastName
              </li>
            </ul>
            <div
              className="c18"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
                <path
                  d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                />
              </svg>
            </div>
          </div>
        </div>
        <h1
          className="c19"
          id="dataSourceTitle"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          name
        </h1>
        <div
          className="c20"
        >
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-0"
            >
              Source
            </span>
            <span
              className="c23"
              id="metaItemValue-0"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": 40,
                    "width": 40,
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-1"
            >
              Items
            </span>
            <span
              className="c23"
              id="metaItemValue-1"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-2"
            >
              Fields
            </span>
            <span
              className="c23"
              id="metaItemValue-2"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-3"
            >
              Filters
            </span>
            <span
              className="c23"
              id="metaItemValue-3"
            >
              —
            </span>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22"
              id="metaItem-4"
            >
              Views
            </span>
            <span
              className="c23"
              id="metaItemValue-4"
            >
              —
            </span>
          </div>
        </div>
      </div>
    </section>
    <div
      className="c24"
    >
      <div
        className="c25"
      >
        <div
          className="c26"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
